add training model on each CWE